# rust-webhooks

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Shuttle.toml  readme.md  shuttle_prebuild.sh  shuttle_setup_container.sh  test_mail.txt
cloudflare/job-alert-worker/: Cargo.toml  wrangler.toml
cloudflare/job-alert-worker/src/: lib.rs
src/: email.rs  main.rs  middlewares.rs  notion.rs  pdf.rs  scheduler.rs  server.rs
src/helpers/: email.rs  job_checker.rs  mod.rs  notion.rs  pdf.rs
src/models/: job.rs  mod.rs
ts/: .env.example  main.ts  package.json  pnpm-lock.yaml
ts/src/: index.ts
