[package]
name = "rust-webhooks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.3"
dotenv = "0.15.0"
lopdf = "=0.36.0"
pdf_form = "=0.4.0"
reqwest = "0.12.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
