[package]
name = "rust-webhooks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.3"
lopdf = "=0.36.0"
reqwest = "0.12.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"

hmac = "0.12.0"
sha2 = "0.10.0"
subtle = "2.4.0"
hex = "0.4.3"
hyper = { version = "1.6.0", features = ["full"] }

bytes = "1.0"
http-body = "1.0.1"
http-body-util = "0.1.0"