[package]
name = "job-alert-worker"
version = "0.1.0"
edition = "2021"
authors = [ "devnull03 <56480041+devnull03@users.noreply.github.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { path = "../workers-rs/worker", features=['http'] }
worker-macros = { path = "../workers-rs/worker-macros", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
reqwest = "0.12.12"
